# aipm

./: .env.example  .gitignore  Cargo.toml  README.md  SUBTASK_IDS_DESIGN.md  agents.md  cd  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  homebrew.yml  release.yml
Formula/: aipm.rb
apps/: README.md
apps/tui/: Cargo.toml  package.json
apps/tui/Formula/: aipm.rb
apps/tui/docs/data/: storage.md
apps/tui/docs/features/: suggestions.md
apps/tui/docs/ui/: keybindings.md
apps/tui/src/: google.rs  llm.rs  main.rs  model.rs
apps/web/: astro.config.mjs  package.json
apps/web/src/components/: CheckIcon.tsx
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/pages/: index.astro  terms.astro
apps/web/src/styles/: global.css
docs/: buckets.md  cli-reference.md  suggestions.md  tasks.md  undo.md
docs/features/: ai.md  suggestions.md
docs/ui/: keybindings.md
src/: ai.rs  calendar.rs  cli.rs  google.rs  llm.rs  mail.rs  main.rs  mcp.rs  model.rs  storage.rs
website/: astro.config.mjs  pnpm-lock.yaml
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro  privacy.astro
