[package]
name = "aipm"
version = "0.8.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
unicode-width = "0.1"
ureq = { version = "2", features = ["json"] }
serde_yaml = "0.9"
base64 = "0.22"
